--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,82 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Louis Lajoie</title>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Sarabun&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
+<header>
+    <nav>
+        <div class="logo">
+            <img src="images/logo.svg" alt="">
+            <h2>Louis Lajoie</h2>
+        </div>
+        <div>
+            <ul>
+                <li><a href="">Accueil</a></li>
+                <li><a href="">A&nbsp;propos</a></li>
+                <li><a href="">Realisations</a></li>
+                <li><a href="">Contact</a></li>
+            </ul>
+        </div>
+    </nav>
+</header>
+<section class="hero">
+    <h4>Intégrateur web</h4>
+    <h1>Louis Lajoie</h1>
+    <p>
+        Vous cherche un spécialiste en développement web, en animation de page web et en référencement, vous l’avez
+        trouvé!
+    </p>
+    <a href="">Voir mes réalisations</a>
+    <img src="images/louis-lajoie.png" alt="">
+</section>
 
+<section class="content">
+    <div class="segment">
+        <img src="images/Desktop.svg" alt="">
+        <h3>Création de sites web</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio, ut!</p>
+    </div>
+
+    <div class="segment">
+        <img src="images/cogs.svg" alt="">
+        <h3>Conception graphique</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum deserunt enim inventore laboriosam praesentium
+            quos reprehenderit soluta voluptatibus.</p>
+    </div>
+
+    <div class="segment">
+        <img src="images/camera.svg" alt="">
+        <h3>Photographie</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis incidunt minus sequi totam. Autem!</p>
+    </div>
+
+    <div class="segment">
+        <img src="images/stats-dots%20(1).svg" alt="">
+        <h3>Référencement</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At dicta fugiat magni qui.</p>
+    </div>
+
+    <div class="segment">
+        <img src="images/share.svg" alt="">
+        <h3>Médias sociaux</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate itaque odio optio porro vitae?
+            Provident, quam?</p>
+    </div>
+
+    <div class="segment">
+        <img src="images/pencil.svg" alt="">
+        <h3>Illustrations</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo?</p>
+    </div>
+
+</section>
+
+<footer>
+    <p>Expert TIM ©. Les icônes sont récupérés sur le site icomoon.io</p>
+</footer>
 </body>
 </html>
